syntax = "proto3";

package common.v1;

message PaginationRequest {
  int32 cursor = 1;
  int32 length = 2;
}
